<resources>
    <string name="app_name">Popular Movies</string>
    <string name="all_ordered_by">All ordered by</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="original_title">Original title:</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="error">Cannot download valid data from the server.</string>
    <string name="page_prev">\u2190</string>
    <string name="page_next">\u2192</string>
    <string name="pageNumberInfo" formatted="false">Page %d from %d</string>
    <string name="added_to_favorites">Movie added to favorites</string>
    <string name="removed_from_favorites">Movie removed from favorites</string>
    <string name="settings">Settings</string>
    <string name="favorites_list">List of favorite movies</string>
    <string name="shown">Shown</string>
    <string name="hidden">Hidden</string>
    <string name="favorites">Favorites</string>
    <string name="show_favorites_key" translatable="false">show_favorites</string>
    <string name="videos_error">Connection error. Unable to load videos.</string>
    <string name="reviews_error">Connection error. Unable to load reviews.</string>
    <string name="unsupported_video_site_error">Video links from site %s are not supported by the current version of an application.</string>
    <string name="video_open_error">Error. Could not open video.</string>
    <string name="user_review_header">Review posted by %s</string>
    <string name="reviews_list_header">User reviews</string>
    <string name="most_popular_list_header">Most popular movies</string>
    <string name="top_rated_list_header">Top rated movies</string>
    <string name="favorites_list_header">My favorite movies</string>
</resources>
