<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/activity_movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.popularmovies1.activities.MovieDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_title"
            android:layout_above="@+id/ll_details">
            <ImageButton
                android:id="@+id/ib_add_to_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_favorite_border_48dp"
                android:onClick="handleLikeButtonClick"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_original_title_value"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:paddingRight="48dp"
                android:paddingTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_details"
            android:layout_gravity="center">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_details_poster"
            android:layout_below="@+id/ll_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:text="@string/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_release_date_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_release_date_value" />

                <TextView
                    android:text="@string/vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_vote_average_label"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_vote_average_value" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_details"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_overview_value" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

            <ProgressBar
                android:id="@+id/pb_videos_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <TextView android:id="@+id/tv_videos_error"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/videos_error"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_reviews_list_header"
                android:textAlignment="center"
                android:textSize="18dp"
                android:text="@string/reviews_list_header"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_reviews_page_prev"
                    android:text="@string/page_prev"
                    android:textSize="18dp"
                    android:visibility="invisible"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_reviews_page_num"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page_next"
                    android:id="@+id/btn_reviews_page_next"
                    android:layout_gravity="right"
                    android:textSize="18dp"
                    android:visibility="invisible"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/pb_reviews_loading_indicator"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

                <TextView android:id="@+id/tv_reviews_error"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/reviews_error"
                    android:visibility="invisible"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"/>
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>